--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
+    "redux": "^4.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
